--- a/PySpark/ipl_problem.ipynb
+++ b/PySpark/ipl_problem.ipynb
@@ -7,8 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write a PySpark code to display points table of IPL teams, giving ranks to each team based on decreasing order \n",
-    "# of points (if two teams have same points then consider their NRR in decreasing order)\n",
+    "# Write a PySpark code to display points table of IPL teams, giving ranks to each team based on decreasing order of points\n",
+    "# (if two teams have same points then consider their NRR in decreasing order)\n",
     "\n",
     "import findspark\n",
     "findspark.init()"
